--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,12 @@ a {
 
 a {
     transition: all 0.3s ease-out 0s;
-    color: #7fad39;
+    color: #056608;
 }
 
 a:hover {
     transition: all 0.3s ease-out 0s;
-    color: #7fad39;
+    color: #056608;
 }
 
 audio,
@@ -168,7 +168,7 @@ p {
 }
 
 .theme-color {
-    color: #7fad39;
+    color: #056608;
 }
 
 .bg-facebook {
@@ -198,13 +198,13 @@ textarea::placeholder {
 
 input:focus,
 textarea:focus {
-    border-color: #7fad39;
+    border-color: #056608;
 }
 
 .back-to-top {
     width: 45px;
     height: 45px;
-    background: #7fad39;
+    background: #056608;
     text-align: center;
     line-height: 45px;
     font-size: 20px;
@@ -248,7 +248,7 @@ textarea:focus {
     color: #fff;
     cursor: pointer;
     z-index: 5;
-    background: #7fad39;
+    background: #056608;
     transition: all 0.4s ease-out 0s;
 }
 
@@ -370,7 +370,7 @@ textarea:focus {
     height: 100%;
     border-style: solid;
     /* Spinner Color */
-    border-color: #7fad39 #7fad39 #F9F9F9;
+    border-color: #056608 #056608 #F9F9F9;
     border-radius: 50%;
     border-width: 6px;
 }
@@ -1381,7 +1381,7 @@ textarea:focus {
     left: 0;
     width: 0;
     height: 3px;
-    background-color: #7fad39;
+    background-color: #056608;
     transition: all 0.3s ease-out 0s;
 }
 
@@ -1402,7 +1402,7 @@ textarea:focus {
 }
 
 .navbar-nav .nav-item a.active {
-    color: #7fad39;
+    color: #056608;
 }
 
 .navbar-nav .nav-item a.active::after {
@@ -1422,7 +1422,7 @@ textarea:focus {
 }
 
 .navbar-nav .nav-item:hover>a {
-    color: #7fad39;
+    color: #056608;
 }
 
 .navbar-nav .nav-item:hover>a::after {
@@ -1552,7 +1552,7 @@ textarea:focus {
 .navbar-nav .nav-item .sub-menu li a.active,
 .navbar-nav .nav-item .sub-menu li a:hover {
     padding-left: 25px;
-    color: #7fad39;
+    color: #056608;
 }
 
 .navbar-nav .nav-item .sub-menu li a.active::after,
@@ -1648,13 +1648,13 @@ textarea:focus {
     justify-content: center;
     align-items: center;
     background: #fff;
-    color: #7fad39;
+    color: #056608;
     border-radius: 50%;
 }
 
 .account-icon a:hover {
     color: #fff;
-    background: #7fad39;
+    background: #056608;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1676,10 +1676,10 @@ textarea:focus {
 }
 
 .header-btn .main-btn.account-btn {
-    border: 1px solid #7fad39;
+    border: 1px solid #056608;
     margin-right: 15px;
     background: transparent;
-    color: #7fad39;
+    color: #056608;
     position: relative;
     padding-right: 50px;
 }
@@ -1697,8 +1697,8 @@ textarea:focus {
     transform-origin: 66% 66%;
     transform: rotate(45deg);
     transition: all 0.3s ease-out 0s;
-    border-bottom: 2px solid #7fad39;
-    border-right: 2px solid #7fad39;
+    border-bottom: 2px solid #056608;
+    border-right: 2px solid #056608;
 }
 
 @media (max-width: 767px) {
@@ -1716,12 +1716,12 @@ textarea:focus {
 }
 
 .sticky .navbar-nav .nav-item a::before {
-    background-color: #7fad39;
+    background-color: #056608;
 }
 
 .sticky .navbar-nav .nav-item a.active,
 .sticky .navbar-nav .nav-item a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .sticky .navbar-nav .nav-item a.header-btn {
@@ -1759,7 +1759,7 @@ textarea:focus {
 
 .dropdown-nav li:hover a {
     display: block;
-    color: #7fad39;
+    color: #056608;
 }
 
 .dropdown-nav li a {
@@ -1894,7 +1894,7 @@ hero area css
 }
 
 .search-area .search-wrapper form button {
-    background-color: #7fad39;
+    background-color: #056608;
     color: #fff;
     width: 100%;
     padding: 0 25px;
@@ -1933,7 +1933,7 @@ hero area css
 }
 
 .category-list-area .category-list-wrapper .category-list-item a:hover {
-    background-color: #7fad39;
+    background-color: #056608;
 }
 
 .category-list-area .category-list-wrapper .category-list-item a:hover .icon,
@@ -1945,7 +1945,7 @@ hero area css
     font-size: 35px;
     margin-bottom: 10px;
     line-height: 1;
-    color: #7fad39;
+    color: #056608;
     transition: all 0.3s ease-out 0s;
 }
 
@@ -2025,7 +2025,7 @@ hero area css
 }
 
 .category-area .category-top .right-wrapper .product-view-btns li a.active {
-    color: #7fad39;
+    color: #056608;
 }
 
 .category-area .category-top .right-wrapper form {
@@ -2085,11 +2085,11 @@ hero area css
 }
 
 .category-area .category-wrapper .sidebar-wrapper .price-range .noUi-connect {
-    background: #7fad39;
+    background: #056608;
 }
 
 .category-area .category-wrapper .sidebar-wrapper .price-range .noUi-handle {
-    border-color: #7fad39;
+    border-color: #056608;
 }
 
 .category-area .category-wrapper .sidebar-wrapper .sidebar-category ul li a {
@@ -2101,7 +2101,7 @@ hero area css
 }
 
 .category-area .category-wrapper .sidebar-wrapper .sidebar-category ul li a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .category-area .category-wrapper .sidebar-wrapper .sidebar-category ul li a span.right {
@@ -2143,7 +2143,7 @@ hero area css
 
 .category-area .category-wrapper .sidebar-wrapper .social li a:hover {
     color: #fff;
-    background: #7fad39;
+    background: #056608;
     box-shadow: 0px 3px 25px rgba(255, 107, 107, 0.3);
 }
 
@@ -2196,20 +2196,20 @@ hero area css
     align-items: center;
     border-radius: 50%;
     margin-bottom: 10px;
-    background: #7fad39;
+    background: #056608;
     color: #fff;
     font-size: 14px;
 }
 
 .single-product .product-img .product-action a.share {
     background: #fff;
-    color: #7fad39;
+    color: #056608;
 }
 
 .single-product .product-img a.badge {
     font-size: 16px;
     color: #fff;
-    background: #7fad39;
+    background: #056608;
     padding: 5px 16px;
     position: absolute;
     top: 25px;
@@ -2232,7 +2232,7 @@ hero area css
 }
 
 .single-product .product-content .name:hover a {
-    color: #7fad39;
+    color: #056608;
 }
 
 .single-product .product-content .update {
@@ -2259,7 +2259,7 @@ hero area css
 }
 
 .single-product .product-content .address li a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .single-product .product-content .product-bottom {
@@ -2271,7 +2271,7 @@ hero area css
 
 .single-product .product-content .product-bottom .price {
     font-weight: 600;
-    color: #7fad39;
+    color: #056608;
 }
 
 .single-product .product-content .product-bottom a.link-ad {
@@ -2285,8 +2285,8 @@ hero area css
 
 .single-product .product-content .product-bottom a.link-ad:hover {
     color: #fff;
-    background-color: #7fad39;
-    border-color: #7fad39;
+    background-color: #056608;
+    border-color: #056608;
 }
 
 .single-product .product-content .product-bottom a.address-link {
@@ -2294,7 +2294,7 @@ hero area css
 }
 
 .single-product .product-content .product-bottom a.address-link:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .single-product .product-content .rating-wrapper {
@@ -2318,7 +2318,7 @@ hero area css
 }
 
 .single-product .product-content .rating-wrapper .rating i {
-    color: #7fad39;
+    color: #056608;
     font-size: 14px;
 }
 
@@ -2390,7 +2390,7 @@ hero area css
 
 .product-carousel-wrapper .tns-controls button span:hover {
     color: #fff;
-    background: #7fad39;
+    background: #056608;
 }
 
 .product-carousel-wrapper .tns-controls button span.next {
@@ -2484,7 +2484,7 @@ hero area css
 }
 
 .product-details-area .product-details-wrapper .info-wrapper .text-wrapper .meta-top a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .product-details-area .product-details-wrapper .info-wrapper .text-wrapper .subtitle {
@@ -2562,11 +2562,11 @@ hero area css
 }
 
 .product-details-area .product-details-wrapper .info-wrapper .text-wrapper .meta-bottom ul li a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .product-details-area .product-details-wrapper .review-wrapper .rating i {
-    color: #7fad39;
+    color: #056608;
 }
 
 .product-details-area .product-details-wrapper .review-wrapper .review-header {
@@ -2660,7 +2660,7 @@ hero area css
 }
 
 .product-details-area .product-details-wrapper .review-wrapper .review-body .review-item-wrapper .review-item .media .reply {
-    color: #7fad39;
+    color: #056608;
 }
 
 .product-details-area .product-details-wrapper .review-wrapper .review-body .review-item-wrapper .review-item.reply-item {
@@ -2686,8 +2686,8 @@ hero area css
 }
 
 .product-details-area .product-details-wrapper .review-wrapper .review-body .add-review-wrapper .review-form .form-check-input:checked {
-    background-color: #7fad39;
-    border-color: #7fad39;
+    background-color: #056608;
+    border-color: #056608;
     outline: none;
     box-shadow: none;
 }
@@ -2709,8 +2709,8 @@ Service css
 }
 
 .service-area .single-service:hover {
-    background-color: #7fad39;
-    border-color: #7fad39;
+    background-color: #056608;
+    border-color: #056608;
 }
 
 .service-area .single-service:hover .icon {
@@ -2724,7 +2724,7 @@ Service css
 
 .service-area .single-service .icon {
     font-size: 60px;
-    color: #7fad39;
+    color: #056608;
     transition: all 0.3s ease-out 0s;
 }
 
@@ -2761,7 +2761,7 @@ Service css
 
 .pricing-area .single-pricing .icon {
     font-size: 50px;
-    color: #7fad39;
+    color: #056608;
     margin-bottom: 10px;
 }
 
@@ -2781,7 +2781,7 @@ Service css
 
 .pricing-area .single-pricing .price {
     font-size: 35px;
-    color: #7fad39;
+    color: #056608;
     margin-bottom: 10px;
 }
 
@@ -2828,7 +2828,7 @@ Service css
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: #7fad39;
+    background: #056608;
     color: #fff;
     top: 0;
     right: 0;
@@ -2910,7 +2910,7 @@ testimonial css
     width: 12px;
     height: 12px;
     border: none;
-    background: #7fad39;
+    background: #056608;
     opacity: .6;
     border-radius: 50%;
     margin: 0 7px;
@@ -2954,7 +2954,7 @@ video css
     line-height: 80px;
     border-radius: 50%;
     background: #fff;
-    color: #7fad39;
+    color: #056608;
     position: relative;
     margin: auto;
     z-index: 1;
@@ -3004,7 +3004,7 @@ video css
 
 .count-up-wrapper .single-counter .icon {
     font-size: 60px;
-    color: #7fad39;
+    color: #056608;
 }
 
 .count-up-wrapper .single-counter span {
@@ -3079,7 +3079,7 @@ video css
 }
 
 .banner-area .banner-content .breadcrumb li a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .welcome-area .welcome-img {
@@ -3152,7 +3152,7 @@ video css
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background: #7fad39;
+    background: #056608;
     color: #fff;
     font-size: 45px;
 }
@@ -3179,7 +3179,7 @@ video css
     width: 280px;
     height: 280px;
     border-radius: 50%;
-    border: 2px dashed #7fad39;
+    border: 2px dashed #056608;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3194,7 +3194,7 @@ video css
     justify-content: center;
     align-items: center;
     font-size: 75px;
-    color: #7fad39;
+    color: #056608;
     background: #fff;
     box-shadow: 0px 3px 35px rgba(218, 222, 228, 0.3);
 }
@@ -3271,12 +3271,12 @@ video css
 
 .dashboard-area .left-sidebar-wrapper .sidebar-menu ul li a.active::before,
 .dashboard-area .left-sidebar-wrapper .sidebar-menu ul li a:hover::before {
-    background: #7fad39;
+    background: #056608;
 }
 
 .dashboard-area .left-sidebar-wrapper .sidebar-menu ul li a.active i,
 .dashboard-area .left-sidebar-wrapper .sidebar-menu ul li a:hover i {
-    color: #7fad39;
+    color: #056608;
 }
 
 .dashboard-area .left-sidebar-wrapper .sidebar-menu ul li a i {
@@ -3309,7 +3309,7 @@ video css
 
 .dashboard-area .dashboard-wrapper .cards-wrapper .ads-btn:hover,
 .dashboard-area .dashboard-wrapper .cards-wrapper .ads-btn.active {
-    background: #7fad39;
+    background: #056608;
     color: #fff;
 }
 
@@ -3336,13 +3336,13 @@ video css
 }
 
 .dashboard-area .dashboard-wrapper .cards-wrapper .single-card:hover {
-    background: #7fad39;
-    border-color: #7fad39;
+    background: #056608;
+    border-color: #056608;
 }
 
 .dashboard-area .dashboard-wrapper .cards-wrapper .single-card:hover .icon i {
     background: #fff;
-    color: #7fad39;
+    color: #056608;
 }
 
 .dashboard-area .dashboard-wrapper .cards-wrapper .single-card:hover .text h5,
@@ -3375,7 +3375,7 @@ video css
     align-items: center;
     border-radius: 50%;
     color: #fff;
-    background: #7fad39;
+    background: #056608;
     transition: all 0.3s ease-out 0s;
 }
 
@@ -3423,7 +3423,7 @@ video css
 }
 
 .dashboard-area .dashboard-wrapper .table-wrapper table tbody tr:hover::before {
-    background: #7fad39;
+    background: #056608;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -3458,7 +3458,7 @@ video css
 
 .dashboard-area .dashboard-wrapper .table-wrapper table tbody tr td .image .form-check input {
     padding: 0;
-    background-color: #7fad39;
+    background-color: #056608;
     outline: none;
     border-color: transparent;
     box-shadow: none;
@@ -3466,7 +3466,7 @@ video css
 }
 
 .dashboard-area .dashboard-wrapper .table-wrapper table tbody tr td .image .form-check input:checked {
-    background-color: #7fad39;
+    background-color: #056608;
 }
 
 .dashboard-area .dashboard-wrapper .table-wrapper table tbody tr td h6 {
@@ -3490,7 +3490,7 @@ video css
     padding: 4px 18px;
     font-weight: 400;
     border-radius: 30px;
-    background: #7fad39;
+    background: #056608;
     color: #fff;
 }
 
@@ -3524,7 +3524,7 @@ video css
 }
 
 .dashboard-area .dashboard-wrapper .table-wrapper table tbody tr td .action-btns a.delete-btn:hover {
-    background: #7fad39;
+    background: #056608;
 }
 
 .form-check.check-style {
@@ -3536,7 +3536,7 @@ video css
 
 .form-check.check-style input {
     padding: 0;
-    background-color: #7fad39;
+    background-color: #056608;
     outline: none;
     border-color: transparent;
     box-shadow: none;
@@ -3544,7 +3544,7 @@ video css
 }
 
 .form-check.check-style input:checked {
-    background-color: #7fad39;
+    background-color: #056608;
 }
 
 .privacy-wrapper .left-wrapper ul li {
@@ -3665,7 +3665,7 @@ video css
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #7fad39;
+    background: #056608;
     top: 0;
     left: 0;
 }
@@ -3680,7 +3680,7 @@ video css
 }
 
 .chat-wrapper .chat-list-wrapper .chat-list .chat-item .chat-link .info span {
-    color: #7fad39;
+    color: #056608;
     font-weight: 700;
     font-size: 14px;
 }
@@ -3857,7 +3857,7 @@ footer css
 }
 
 .footer-area .widget-wrapper .footer-widget ul a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .footer-area .widget-wrapper .footer-widget ul.social {
@@ -3885,7 +3885,7 @@ footer css
 }
 
 .footer-area .widget-wrapper .footer-widget ul.social li a:hover {
-    background: #7fad39;
+    background: #056608;
     color: #fff;
     box-shadow: drop-shadow(0px 5px 15px rgba(255, 107, 107, 0.3));
 }
@@ -3907,7 +3907,7 @@ footer css
 
 .footer-area .copy-right .left a:hover,
 .footer-area .copy-right .right a:hover {
-    color: #7fad39;
+    color: #056608;
 }
 
 .client-logo-area .client-logo-wrapper .single-logo {
